Import funguloids-linux-1.05.tar.bz2 (version 1.05)
These files have been unpacked:

bin/bootstrap.mpk
bin/funguloids.mpk

These files have been converted:

bin/funguloids/whiteglow2.dds
bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton

These files have been deleted:

bin/bootstrap.mpk
bin/funguloids.mpk
bin/funguloids/whiteglow2.dds
bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton
include/SimpleIni
bin/bootstrap/VeraIt.ttf
bin/bootstrap/Vera.ttf
bin/bootstrap/VeraBd.ttf
bin/bootstrap/VeraBI.ttf
obj/empty
obj

--- a/bin/plugins.cfg
+++ b/bin/plugins.cfg
@@ -1,11 +1,10 @@
 # Defines plugins to load
 
 # Define plugin folder
-PluginFolder=plugins
-#PluginFolder=plugins_debug
+PluginFolder=/usr/local/lib/OGRE
+#PluginFolder=plugins
 
 # Define plugins
-Plugin=RenderSystem_Direct3D9
 Plugin=RenderSystem_GL
 Plugin=Plugin_ParticleFX
 Plugin=Plugin_OctreeSceneManager
