Import funguloids-linux-1.06.tar.bz2 (version 1.06)
These files have been unpacked:

bin/bootstrap.mpk
bin/funguloids.mpk

These files have been converted:

bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton

These files have been deleted:

bin/bootstrap.mpk
bin/funguloids.mpk
bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton
configure
include/SimpleIni
aclocal.m4
bin/Makefile.in
bin/bootstrap/VeraIt.ttf
bin/bootstrap/Vera.ttf
bin/bootstrap/VeraBd.ttf
bin/bootstrap/VeraBI.ttf
bin/icon/Makefile.in
bin/music/Makefile.in
bin/docs/Makefile.in
build-aux
include/Makefile.in
include/config.h.in
Makefile.in
src/Makefile.in

--- a/bin/music/playlist.lua.in
+++ b/bin/music/playlist.lua.in
@@ -1,6 +1,9 @@
 -- Add music files to the playlist
 -- (remember to use normal slashes "/", not backslashes "\"!)
-AddToPlaylist(GetMusicDir() .. "*.*");
+AddToPlaylist("%%musicinstalldir%%/*.ogg");
+AddToPlaylist("%%musicinstalldir%%/*.mp3");
+AddToPlaylist(GetMusicDir() .. "*.ogg");
+AddToPlaylist(GetMusicDir() .. "*.mp3");
 --AddToPlaylist("C:/My Music/*.mp3");
 
 -- Shuffle the playlist
