--- a/bin/plugins.cfg.in
+++ b/bin/plugins.cfg.in
@@ -1,8 +1,7 @@
 # Defines plugins to load
 
 # Define plugin folder
-PluginFolder=/usr/local/lib/OGRE
-#PluginFolder=plugins
+PluginFolder=%%ogreplugindir%%
 
 # Define plugins
 Plugin=RenderSystem_GL
