Import funguloids-linux-1.06-4.tar.bz2 (version 1.06-4)
These files have been unpacked:

bin/bootstrap.mpk
bin/funguloids.mpk

These files have been converted:

bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton

These files have been deleted:

bin/bootstrap.mpk
bin/funguloids.mpk
bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton
configure
include/SimpleIni
aclocal.m4
bin/Makefile.in
bin/bootstrap/VeraIt.ttf
bin/bootstrap/Vera.ttf
bin/bootstrap/VeraBd.ttf
bin/bootstrap/VeraBI.ttf
bin/icon/Makefile.in
bin/music/Makefile.in
bin/docs/Makefile.in
build-aux
include/Makefile.in
include/config.h.in
Makefile.in
src/Makefile.in

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
-AC_INIT(funguloids,[1.06-3])
+AC_INIT(funguloids,[1.06-4])
 AC_CONFIG_SRCDIR([src/mpak.cpp])
 AC_CONFIG_HEADER([include/config.h])
 AC_CONFIG_AUX_DIR([build-aux])
@@ -60,7 +60,11 @@ AC_ARG_WITH(lua,
 
 FUNGU_SEARCH_HEADER( [lua.h], [$lua_dir /usr/local /usr], [ include/lua5.1 include/lua / ] )
 if test "x$FUNGU_FOUND_HEADER" = "xno"; then
-	AC_MSG_ERROR(Lua not found. You can specify its location with [[--with-lua=/path/to/include/lua51]])
+	PKG_CHECK_MODULES(LUA, [lua >= 5.1],[],[
+		PKG_CHECK_MODULES(LUA, [lua5.1 >= 5.1],[],[
+			AC_MSG_ERROR(Lua 5.1 not found. You can specify its location with [[--with-lua=/path/to/include/lua51]])
+		])
+	])
 else
 	CFLAGS="$CFLAGS $FUNGU_FOUND_HEADER"
 	CPPFLAGS="$CPPFLAGS $FUNGU_FOUND_HEADER"
@@ -68,6 +72,8 @@ else
 fi
 AC_LANG_POP
 
+AC_SUBST(LUA_CFLAGS)
+AC_SUBST(LUA_LIBS)
 
 # SOUND ----------------------------------------------------
 # 1. FMOD  -------------------------------------------------
