--- a/bin/resources.cfg.in
+++ b/bin/resources.cfg.in
@@ -1,10 +1,12 @@
 # Resource locations to be added to the 'boostrap' path
 [Bootstrap]
-MPK=%%gameinstalldir%%bootstrap.mpk
+#MPK=%%gameinstalldir%%bootstrap.mpk
+FileSystem=%%gameinstalldir%%bootstrap
 
 # Resource locations to be added to the default path
 [General]
-MPK=%%gameinstalldir%%funguloids.mpk
+#MPK=%%gameinstalldir%%funguloids.mpk
+FileSystem=%%gameinstalldir%%funguloids
 FileSystem=%%gameinstalldir%%music
 FileSystem=%%gameinstalldir%%icon
 
