Fix Lua 5.1 support on Arch Linux
Since commit
https://git.archlinux.org/svntogit/packages.git/commit/trunk?h=packages/lua51&id=d46f4b70dab932996805f93dd386417b86021eb2
lua51 installed its pkg-config file as "lua51.pc" instead of
"lua5.1.pc".

Update the Lua detection logic.

--- a/configure.ac
+++ b/configure.ac
@@ -53,7 +53,9 @@ AC_SUBST(OIS_LIBS)
 # LUA ----------------------------------------------------
 PKG_CHECK_MODULES(LUA, [lua >= 5.1, lua < 5.2],[],[
 	PKG_CHECK_MODULES(LUA, [lua5.1 >= 5.1],[],[
-		AC_MSG_ERROR(Lua 5.1 not found)
+		PKG_CHECK_MODULES(LUA, [lua51 >= 5.1, lua51 < 5.2],[],[
+			AC_MSG_ERROR(Lua 5.1 not found)
+		])
 	])
 ])
 
