--- a/configure.ac
+++ b/configure.ac
@@ -31,11 +31,15 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS([stdlib.h string.h sys/param.h wchar.h])
 
 # OGRE ----------------------------------------------------
-PKG_CHECK_MODULES(OGRE, [OGRE >= 1.9.0])
+PKG_CHECK_MODULES(OGRE, [OGRE >= 1.10.0])
 AC_SUBST(OGRE_CFLAGS)
 AC_SUBST(OGRE_LIBS)
 
-PKG_CHECK_MODULES(OGRE_OVERLAY, [OGRE-Overlay >= 1.9.0])
+PKG_CHECK_MODULES(OGRE_BITES, [OGRE-Bites >= 1.10.0])
+AC_SUBST([OGRE_BITES_CFLAGS])
+AC_SUBST([OGRE_BITES_LIBS])
+
+PKG_CHECK_MODULES(OGRE_OVERLAY, [OGRE-Overlay >= 1.10.0])
 AC_SUBST([OGRE_OVERLAY_CFLAGS])
 AC_SUBST([OGRE_OVERLAY_LIBS])
 
