[OGRE 1.11] Load FreeImage plugin
https://github.com/OGRECave/ogre/blob/master/Docs/1.11-Notes.md :

    Generic Image codecs (STB Image, FreeImage) are now plugins.

Without it, loading textures fail with:

    Error: preparing texture 'Border_Center.png'. Texture layer will be
    blank: ItemIdentityException: Can not find codec for 'png' image
    format.
    Supported formats are: dds ktx pkm. in Codec::getCodec at
    /build/ogre/src/ogre-1.11.0/OgreMain/src/OgreCodec.cpp (line 66)

--- a/bin/plugins.cfg.in
+++ b/bin/plugins.cfg.in
@@ -4,6 +4,7 @@
 PluginFolder=%%ogreplugindir%%
 
 # Define plugins
+Plugin=Codec_FreeImage
 Plugin=RenderSystem_GL
 Plugin=Plugin_ParticleFX
 Plugin=Plugin_OctreeSceneManager
